hard-gists/2571471/run.log
=== Docker Run Log for 2571471 ===
Started at: Mi 29. Okt 13:06:50 CET 2025

[2025-10-29 13:06:51] START: Running container for 2571471
[2025-10-29 13:06:51] SUCCESS: Container c2b9ee5ed4b740456e015e67ae4fe4a398b19adf8d8a95bab53d86065c39f625 started for 2571471
=== Container logs for 2571471 ===
  File "/snippet.py", line 18
    print "finished %s" % host
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 2571471 ===
[2025-10-29 13:06:53] INFO: Container c2b9ee5ed4b740456e015e67ae4fe4a398b19adf8d8a95bab53d86065c39f625 has stopped
